fixed css spacing

--- a/_sass/moving/_layout.scss
+++ b/_sass/moving/_layout.scss
@@ -204,7 +204,7 @@
 }
 
 .post-link-layout {
-  margin-left: 10%;
+  margin-left: 20px;
   display: table-cell;
 
   @media (max-width: 500px) {
